k8s/ms10-demo1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms10-demo1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms10-demo1
  template:
    metadata:
      labels:
        app: ms10-demo1
    spec:
      containers:
        - name: ms10-demo1
          image: feyziyev007/ms10-demo1
          ports:
            - containerPort: 8080
