k8s/ms10-security-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms10-security-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms10-security
  template:
    metadata:
      labels:
        app: ms10-security
    spec:
      containers:
        - name: ms10-security
          image: feyziyev007/ms10-sec
          ports:
            - containerPort: 8080
