k8s/db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
