k8s/ms10-demo1-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ms10-demo1-service
spec:
  selector:
    app: ms10-demo1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
