k8s/ms10-security-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ms10-security-service
spec:
  selector:
    app: ms10-security
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
