k8s/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myapp.local
      http:
        paths:
          - pathType: Prefix
            path: /sec
            backend:
              service:
                name: ms10-security-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /demo1
            backend:
              service:
                name: ms10-demo1-service
                port:
                  number: 8080
