k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: suruculuk.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ms10-demo1-service
                port:
                  number: 80

    - host: login.suruculuk.cloud
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ms10-security-service
                port:
                  number: 80
